# video-analytics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: analytics.yaml  compare.yaml  detect.yaml  pipeline.yaml  track.yaml
eval/: evaluate.py  ground_truth.example.json
notebooks/: error_analysis.ipynb
scripts/: make_sample_detections.py
slurm/: compare.slurm  detect.slurm  hello.slurm
src/: __init__.py  analytics.py  annotate.py  benchmark.py  common.py  detect.py  ingest.py  pipeline.py  schema.py  track.py
tests/: test_analytics.py  test_benchmark.py  test_geometry.py  test_integration.py  test_schema.py  test_tracker.py
web/: dashboard.py
