[project]
name = "video-analytics"
version = "0.1.0"
description = "Object detection, tracking, and analytics over video (YOLO + IoU/SORT tracker + counting/zones/heatmaps + Streamlit dashboard)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Shyngys Narseyit" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
detect = ["ultralytics>=8.3", "torch>=2.2", "opencv-python>=4.9"]
dash = ["streamlit>=1.33", "matplotlib>=3.8"]
track = ["wandb>=0.16"]
dev = ["pytest>=8.0", "ruff>=0.4"]
all = [
  "ultralytics>=8.3", "torch>=2.2", "opencv-python>=4.9",
  "streamlit>=1.33", "matplotlib>=3.8", "wandb>=0.16",
  "pytest>=8.0", "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
